Fixed bug where shiftAppens logo was not totally clickable

--- a/main.css
+++ b/main.css
@@ -200,3 +200,7 @@ body {
   position: absolute;
 }
 
+.estilo {
+  position: absolute;
+}
+
